Update CartRepositoryI interface and DisplayCartDTO struct
