# internal/interfaces/api/cart_handler.go
@@ -4,6 +4,7 @@ import (
 	"strconv"
 
 	"github.com/Furkan-Gulsen/Checkout-System/internal/application"
+	"github.com/Furkan-Gulsen/Checkout-System/internal/interfaces/dto"
 	"github.com/gin-gonic/gin"
 )
 
@@ -39,8 +40,8 @@ func (h *CartHandler) ApplyPromotion(c *gin.Context) {
 		return
 	}
 
-	err = h.cartApp.ApplyPromotion(cartId, promotionId)
-	if err != nil {
+	cart, promErr := h.cartApp.ApplyPromotion(cartId, promotionId)
+	if err != promErr {
 		c.JSON(500, gin.H{"status": false, "message": err.Error()})
 		return
 	}
@@ -48,6 +49,7 @@ func (h *CartHandler) ApplyPromotion(c *gin.Context) {
 	c.JSON(200, gin.H{
 		"status":  true,
 		"message": "Promotion applied successfully",
+		"data":    cart,
 	})
 }
 
@@ -103,4 +105,46 @@ func (h *CartHandler) ResetCart(c *gin.Context) {
 		"status":  true,
 		"message": "Cart reset successfully",
 	})
+}
+
+// @Summary Add item
+// @Description Add an item to a cart
+// @Tags Cart
+// @Accept json
+// @Produce json
+// @Param cartId path int true "Cart ID"
+// @Param item body dto.ItemCreateRequest true "Item"
+// @Success 200 {string} string "Item added successfully"
+// @Router /api/v1/cart/{cartId}/item [post]
+func (h *CartHandler) AddItem(c *gin.Context) {
+	var data dto.ItemCreateRequest
+
+	if err := c.ShouldBindJSON(&data); err != nil {
+		c.JSON(400, gin.H{"status": false, "message": err.Error()})
+		return
+	}
+
+	itemEntity := data.ToEntity()
+	err := itemEntity.Validate()
+	if err != nil {
+		c.JSON(400, gin.H{
+			"status":  false,
+			"message": err.Error(),
+		})
+		return
+	}
+
+	cartId, err := strconv.Atoi(c.Param("cartId"))
+	if err != nil {
+		c.JSON(400, gin.H{"status": false, "message": err.Error()})
+		return
+	}
+
+	_, err = h.cartApp.AddItem(cartId, itemEntity)
+	if err != nil {
+		c.JSON(500, gin.H{"status": false, "message": err.Error()})
+		return
+	}
+
+	c.JSON(200, gin.H{"status": true, "message": "Item added successfully"})
 }
